<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

	<groupId>SPQ1718-BSPQ18-E3</groupId>
	<artifactId>RentalCars</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>RentalCars</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<server.IP>127.0.0.1</server.IP>
		<server.port>1099</server.port>
		<server.Name>RentalCarServer</server.Name>
		<policy.file>${basedir}/src/main/resources/security/java.policy</policy.file>
		<config.files.dir>${basedir}/src/main/resources</config.files.dir>
	</properties>

	<!-- search for the latest version of dependencies in http://mvnrepository.com -->
	<dependencies>
		 <dependency>
            <groupId>org.datanucleus</groupId>
            <artifactId>datanucleus-core</artifactId>
            <version>[5.1.6, 5.9)</version>
        </dependency>
        <dependency>
            <groupId>org.datanucleus</groupId>
            <artifactId>datanucleus-api-jdo</artifactId>
            <version>[5.1.4, 5.9)</version>
        </dependency>
       <dependency>
            <groupId>org.datanucleus</groupId>
            <artifactId>datanucleus-rdbms</artifactId>
            <version>[5.1.6, 5.9)</version>
        </dependency>
       <dependency>     
            <groupId>org.datanucleus</groupId>
            <artifactId>javax.jdo</artifactId>
            <version>[3.2.0-m8, )</version>
        </dependency>
		<dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.45</version>
        </dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.databene</groupId>
			<artifactId>contiperf</artifactId>
			<version>2.2.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
		 	<groupId>org.mockito</groupId>
    		<artifactId>mockito-core</artifactId>
  		  	<version>2.18.0</version>   	
		</dependency>
		  <dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.6.4</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.6.4</version>
		</dependency> 
		<dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>[1.2.17, )</version>
        </dependency>
        <dependency>
    <groupId>net.sourceforge.cobertura</groupId>
    <artifactId>cobertura</artifactId>
    <version>2.1.1</version>
    <scope>test</scope>
</dependency>
    </dependencies>
 
  <build>
         <plugins>
            <plugin>
            	<groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
					<encoding>UTF-8</encoding>
                </configuration>
            </plugin>
              <plugin>
				<groupId>org.datanucleus</groupId>
                <artifactId>datanucleus-maven-plugin</artifactId>
                <version>5.0.2</version>
                <configuration>
                    <log4jConfiguration>${config.files.dir}/log4j.properties</log4jConfiguration>
                    <verbose>true</verbose>
                    <props>${config.files.dir}/datanucleus.properties</props>
                </configuration>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>enhance</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.21.0</version>
			</plugin>
			
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<formats>
						<format>xml</format>
						<format>html</format>
					</formats> 
				 <instrumentation>
					 <!-- This line is for skipping set/get and constructor trivial methods. The coverage is higher-->
					  <ignoreTrivial>true</ignoreTrivial>  
						<excludes>
							<exclude>es/deusto/client/*.class</exclude>
							<exclude>es/deusto/server/Server.class</exclude>
							<exclude>es/deusto/server/**/I*.*</exclude>
							
							<!-- This lines is for excluding from the instrumentation and the coverage calculations all the classes from server down							
							<exclude>es/deusto/server/**/*</exclude> 
							-->
					
						</excludes>
				  </instrumentation>
					<check>
						<branchRate>50</branchRate>
						<lineRate>60</lineRate>
						<haltOnFailure>true</haltOnFailure>
						<totalBranchRate>50</totalBranchRate>
						<totalLineRate>60</totalLineRate>
						<packageLineRate>50</packageLineRate>
						<packageBranchRate>50</packageBranchRate>
						<regexes>
						<!-- Test de las del 80%: pruebas terminadas sin errores-->
							<regex>
								<pattern>es.deusto.testing.*</pattern>
								<branchRate>80</branchRate>
								<lineRate>80</lineRate>
							</regex>
							<!--
							<regex>
								<pattern>com.example.boringcode.*</pattern>
								<branchRate>40</branchRate>
								<lineRate>30</lineRate>
							</regex>
							-->
						</regexes>
					</check>
				</configuration>
			</plugin>
        </plugins>
     </build>
     
     <reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.9</version>
			</plugin>
			<plugin>			
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.0.0</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.6</version> 
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>jdepend-maven-plugin</artifactId>
				<version>2.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.21.0</version>
			</plugin>
			<plugin>
				<groupId>com.googlecode.maven-overview-plugin</groupId>
				<artifactId>maven-overview-plugin</artifactId>
				<version>1.6</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>dashboard-maven-plugin</artifactId>
				<version>1.0.0-beta-1</version>
			</plugin>
		</plugins>
	</reporting>
		
	<profiles> 
		<!-- run as 'mvn exec:java -Pserver' -->
		<profile>  
			<id>server</id>  
			<build>  
				<resources>
					<resource>
						<directory>${config.files.dir}</directory>
						<includes>
							<include>**/*.jdo</include>
							<include>**/*.orm</include>
							<include>**/*.properties</include>
						</includes>
					</resource>
				</resources>

				<plugins>  
					<plugin>
						<artifactId>maven-clean-plugin</artifactId>
						<version>3.0.0</version>
						<configuration>
							<filesets>
								<fileset>
									<directory>${basedir}</directory>
									<includes>
										<include>*.log</include>
										<include>*.ods</include>
									</includes>
								</fileset>
							</filesets>
						</configuration>
					</plugin>

					<plugin>  
						<groupId>org.codehaus.mojo</groupId>  
						<artifactId>exec-maven-plugin</artifactId>  
						<version>1.2.1</version>  
						<configuration>  
								<fork>true</fork>
									<forkedVmArgs>
										<!-- Disable verifier to avoid issues with Java 7 verifier and code          
										instrumentation -->
										<forkedVmArg>-Xverify:none</forkedVmArg>
									</forkedVmArgs>
												
									<mainClass>es.deusto.server.Server</mainClass>
									<systemProperties>
										
										<systemProperty>
											<key>java.security.manager</key>
											<value>java.rmi.RMISecurityManager</value>
										</systemProperty>
										<systemProperty>
											<key>java.rmi.server.codebase</key>
											<value>file:${basedir}/target/classes/</value>
										</systemProperty>
										<systemProperty>
											<key>java.security.policy</key>
											<value>${policy.file}</value>
										</systemProperty>
									</systemProperties>
									<arguments>  
										<argument>${server.IP}</argument>  
										<argument>${server.port}</argument>  
										<argument>${server.Name}</argument>  
									</arguments>  
								</configuration>  
					</plugin>  
		
		
						
				</plugins>  
			</build>  
		</profile>  
		
		<!-- run as 'mvn exec:java -Pclient' -->
		<profile>  
			<id>client</id>  
			<build>  
				<plugins>  
					<plugin>  
						<groupId>org.codehaus.mojo</groupId>  
						<artifactId>exec-maven-plugin</artifactId>  
						<version>1.2.1</version>  
						<configuration>  
									<mainClass>es.deusto.client.Client</mainClass>
									<systemProperties>
										<systemProperty>
											<key>java.security.manager</key>
											<value>java.rmi.RMISecurityManager</value>
										</systemProperty>
										<systemProperty>
											<key>java.security.policy</key>
											<value>${policy.file}</value>
										</systemProperty>
									</systemProperties>
									<arguments>  
										<argument>${server.IP}</argument>  
										<argument>${server.port}</argument>  
										<argument>${server.Name}</argument>  
									</arguments>  
						</configuration>  
					</plugin>  
				</plugins>  
			</build>  
		</profile>  
	</profiles>
	<repositories>
	    <repository>
            <id>DN_M2_Repo</id>
            <name>DataNucleus Repository</name>
            <url>http://www.datanucleus.org/downloads/maven2</url>
        </repository>
    </repositories>
	<pluginRepositories>
        <pluginRepository>
            <id>DataNucleus_2</id>
            <url>http://www.datanucleus.org/downloads/maven2/</url>
        </pluginRepository>
    </pluginRepositories>
	
</project>
